src/SwashbucklerDiary.Rcl/wwwroot/css/app.css
/* ... */
@media (min-width: 600px) {
    .flex-sm-1 {
        flex: 1;
    }
}

.link-card {
    display: flex;
    max-width: 600px;
    margin: 16px auto;
    border-radius: 8px;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
    overflow: hidden;
    transition: transform 0.2s, box-shadow 0.2s;
    text-decoration: none;
    background-color: rgba(var(--m-theme-surface-container-low));
    color: rgba(var(--m-theme-on-surface), var(--m-high-emphasis-opacity)) !important;
    word-break: break-all;
}

    .link-card:hover {
        transform: translateY(-2px);
        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
    }

.link-card__image {
    width: 140px;
    min-width: 140px;
    height: 140px;
    position: relative;
    overflow: hidden;
    padding: 16px;
}

    .link-card__image img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        transition: transform 0.3s;
        border-radius: 8px;
    }

.link-card:hover .link-card__image img {
    transform: scale(1.05);
}

.link-card__content {
    padding: 16px;
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    overflow: hidden;
}

.link-card__title {
    font-size: 18px;
    font-weight: 700;
    margin-bottom: 8px;
    display: -webkit-box;
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.link-card__description {
    font-size: 14px;
    margin-bottom: 12px;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    opacity: var(--m-medium-emphasis-opacity);
}

.link-card__url {
    display: flex;
    align-items: center;
    font-size: 12px;
    color: rgba(var(--m-theme-on-surface), 0.5) !important;
}

.link-card__favicon {
    width: 16px;
    height: 16px;
    margin-right: 6px;
}

.two-line {
    white-space: initial;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    display: -webkit-box;
}

.m-application--is-rtl .m-toolbar .material-symbols-mirror,
.m-application--is-rtl .m-list-item .material-symbols-mirror {
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
}

